# ChangeLog for sec-policy/selinux-ipsec-tools
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sec-policy/cvs-repo/gentoo-x86/sec-policy/selinux-ipsec-tools/Attic/ChangeLog,v 1.5 2005/01/20 10:42:33 kaiowas Exp $

*selinux-ipsec-tools-20050112 (20 Jan 2005)

  20 Jan 2005; petre rodan <kaiowas@gentoo.org>
  +selinux-ipsec-tools-20050112.ebuild:
  policy cleanup

*selinux-ipsec-tools-20041007 (20 Jan 2005)

  20 Jan 2005; petre rodan <kaiowas@gentoo.org>
  -selinux-ipsec-tools-20041007.ebuild,
  -selinux-ipsec-tools-20041026.ebuild, selinux-ipsec-tools-20041113.ebuild:
  mark stable

*selinux-ipsec-tools-20041113 (22 Nov 2004)

  22 Nov 2004; petre rodan <kaiowas@gentoo.org>
  +selinux-ipsec-tools-20041113.ebuild:
  added network-related rules

*selinux-ipsec-tools-20041026 (27 Oct 2004)

  27 Oct 2004; petre rodan <kaiowas@gentoo.org>
  +selinux-ipsec-tools-20041026.ebuild:
  policy cleanup. dropped overgrown nsa version

*selinux-ipsec-tools-20040703 (03 Jul 2004)

  03 Jul 2004; Chris PeBenito <pebenito@gentoo.org> +metadata.xml,
  +selinux-ipsec-tools-20040703.ebuild:
  Initial commit.  Gentoo fixes by Petre Rodan.
