@@ -1,18 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 d5ad3855ad1b6a3f87943808fab7189f ChangeLog 1157
+MD5 adb15217a94c6d46bd3233ec0d0f49dc ChangeLog 1337
 MD5 b457e59ce7e80c06bf1d5f0ae4eac12c metadata.xml 514
-MD5 7379188c2500f8ca9200a306d4e45a18 selinux-ipsec-tools-20040703.ebuild 399
-MD5 00268b40d333effe30f246ed8c165050 selinux-ipsec-tools-20050112.ebuild 403
-MD5 f41c9d5df599a22cb5ed7916cf68a0a0 selinux-ipsec-tools-20041113.ebuild 399
-MD5 4b5117b8e766c6b5a43c10e934f2642e files/digest-selinux-ipsec-tools-20040703 79
+MD5 e76e7e854ce56af9d1b08338c7634816 selinux-ipsec-tools-20050112.ebuild 399
 MD5 7d48589b38c9f843cceae7103c6dcbe4 files/digest-selinux-ipsec-tools-20050112 78
-MD5 94ee02ec27f1d79f80da53f90d725d16 files/digest-selinux-ipsec-tools-20041113 78
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.6 (GNU/Linux)
 
-iD8DBQFB739dGSBEIeh4AEYRAoL2AKCMm4YniSv3wTN0XtiZkmii6PQzaACeJbCf
-TxvmBNBvrhRG7qbObFFR1PY=
-=GYv7
+iD8DBQFB8/W3GSBEIeh4AEYRAuX0AJ9R4RN6oI4NTdzMtS4VMsHkvea9qgCdHwtK
+pQqlILNrev4eoYWxh7MGmWE=
+=1Q7d
 -----END PGP SIGNATURE-----
