@@ -1,14 +1,0 @@
-# Copyright 1999-2005 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sec-policy/cvs-repo/gentoo-x86/sec-policy/selinux-ipsec-tools/Attic/selinux-ipsec-tools-20041113.ebuild,v 1.2 2005/01/20 09:26:37 kaiowas Exp $
-
-inherit selinux-policy
-
-TEFILES="ipsec.te"
-FCFILES="ipsec.fc"
-IUSE=""
-
-DESCRIPTION="SELinux policy for IPSEC tools"
-
-KEYWORDS="x86 ppc sparc amd64"
-
