@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sec-policy/cvs-repo/gentoo-x86/sec-policy/selinux-ipsec-tools/Attic/selinux-ipsec-tools-20050112.ebuild,v 1.1 2005/01/20 10:42:33 kaiowas Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sec-policy/cvs-repo/gentoo-x86/sec-policy/selinux-ipsec-tools/Attic/selinux-ipsec-tools-20050112.ebuild,v 1.2 2005/01/23 19:28:40 kaiowas Exp $
 
 inherit selinux-policy
 
@@ -10,5 +10,5 @@ IUSE=""
 
 DESCRIPTION="SELinux policy for IPSEC tools"
 
-KEYWORDS="~x86 ~ppc ~sparc ~amd64"
+KEYWORDS="x86 ppc sparc amd64"
 
